# supercollider-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
sc_mcp/: analysis.py  server.py  stdlib.py
