[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supercollider-mcp"
version = "0.1.0"
description = "MCP server connecting Claude to SuperCollider with real-time playback and NRT rendering"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "supriya>=26.2b0",
    "numpy>=1.24",
    "soundfile>=0.12",
    "pyloudnorm>=0.1",
    "scipy>=1.10",
]

[project.scripts]
supercollider-mcp = "sc_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["sc_mcp"]
